<resources>
    <string name="app_name">Blackjack</string>
    <string name="start_game">Start Game</string>
    <string name="new_game">NEW GAME?</string>
    <string name="hit">HIT</string>
    <string name="pass">PASS</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="reset_data">Reset Data</string>
    <string name="enter_betting_amount">Enter betting amount:</string>
</resources>